peac_dev/force-app/main/default/objects/Charge__c/Charge__c.object-meta.xml
<CustomObject>
    <label>Charge</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Charge Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>