peac_dev/force-app/main/default/objects/Charge__c/fields/Amount_Due_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_to_Vendor__c</fullName>
    <formula>(Dealer__r.Interim_Rent_Dealer_Percentage__c/100) *  Total_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due to Vendor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>