peac_dev/force-app/main/default/objects/Charge__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charges (Customer)</relationshipLabel>
    <relationshipName>CustomerCharges</relationshipName>
    <type>Lookup</type>
</CustomField>