peac_dev/force-app/main/default/objects/Charge__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charges (Dealer)</relationshipLabel>
    <relationshipName>DealerCharges</relationshipName>
    <type>Lookup</type>
</CustomField>