peac_dev/force-app/main/default/objects/Charge__c/fields/Delinquency__c.field-meta.xml
<CustomField>
    <fullName>Delinquency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delinquency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>