peac_dev/force-app/main/default/objects/Charge__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>InfoLease Invoice Id</inlineHelpText>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>