peac_dev/force-app/main/default/objects/Charge__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Number</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>