peac_dev/force-app/main/default/objects/Charge__c/fields/Total_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice__c</fullName>
    <label>Total Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>