peac_dev/force-app/main/default/objects/Charge__c/fields/Waived_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waived_Paid_Amount__c</fullName>
    <formula>Waived_Amount__c +  Total_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waived + Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>