peac_dev/force-app/main/default/objects/Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Dealer__c</columns>
    <columns>Contract__c</columns>
    <columns>Charge_Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Delinquency__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Total_Invoice__c</columns>
    <columns>Total_Received__c</columns>
    <columns>Total_Due__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Charges</label>
</ListView>